# AICodeReview

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py  settings.py
app/github/: client.py  models.py
app/openai/: client.py
app/tests/: github_test.py
