[tool.poetry]
name = "aicodereview"
version = "0.1.0"
description = ""
authors = ["Yivgen"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic-settings = "^2.6.1"
pydantic = "^2.10.1"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
openai = "^1.55.0"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
fakeredis = "^2.26.1"
pytest-cov = "^6.0.0"
respx = "^0.21.1"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]